--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.struts</groupId>
+      <artifactId>struts2-osgi-bundles</artifactId>
+      <version>2.5.13</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>spy-javaweb</finalName>
